# visy_detector_pkg

./: .rosinstall  CMakeLists.txt  README.md  package.xml
.github/workflows/: action.yml  main.yml
action/: DetectConveyor.action
launch/: detector.launch  system.launch
msg/: ConveyorSystem.msg  MetalChip.msg
src/: conveyor_detector_node.cpp  image_processing_node.cpp  metal_chip_detector_node.cpp
srv/: DetectConveyorSystem.srv  SelectImage.srv
