<?xml version="1.0"?>
<package format="2">
  <name>visy_detector_pkg</name>
  <version>0.1.0</version>
  <description>-</description>

  <maintainer email="deltarobotone@web.de">-</maintainer>

  <license>LGPLv3</license>

  <author>deltarobotone</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <export>
  </export>
</package>
